<resources>
    <string name="app_name">Verba Venture</string>
    <string name="default_web_client_id">206913153355-ndb5vt06ef9kcr4sk44kkehvjqem13qp.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_key">AIzaSyCvUMmXKwr-4yhnI5LaqXCqOfFa8dWi9vo</string>
    <string name="select_languagee">Select Language</string>
    <string name="change_language">Choose Language</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="registerr">Get Started</string>
    <string name="login">Login</string>
    <string name="start_adventure">Start Adventure</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="points">Points: %1$d / %2$d</string>
    <string name="level">Level: %1$d</string>
    <string name="badges">Badge:</string>
    <string name="adventure_mode">Adventure Mode</string>
    <string name="home_learning_mode">Home Learning Mode</string>
    <string name="category">Category: %1$s</string>
    <string name="app_description">Welcome to VerbaVenture! This app helps you learn and explore new languages in an interactive and fun way. Whether you are at home or on an adventure, improve your skills with ease. Start your journey today!</string>

    <string name="start_challenge">Start Challenge</string>

    <!-- Login -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="signing_in">Signing in...</string>
    <string name="verify_email">Please verify your email address.</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="google_sign_in_failed">Google sign-in failed: %1$d</string>
    <string name="failed_to_fetch_user_role">Failed to fetch user role.</string>
    <string name="failed_to_save_user_data">Failed to save user data.</string>
    <!-- Register -->
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="terms_and_conditions">I agree to the <u>Terms and Conditions</u> and <u>Privacy Policy</u></string>    <string name="already_have_account">Already have an account? Login here</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Password must be at least 8 characters, include an uppercase letter, a number, and a special character</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="please_enter_username">Please enter a username</string>
    <string name="agree_terms_conditions">You must agree to the terms and conditions</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="terms_text">Terms and Conditions</string>
    <string name="privacy_text">Privacy Policy</string>
    <string name="use_current_location">Use current location</string>
    <string name="loading">Loading</string>
    <string name="category_icon">Category Icon</string>
    <string name="select_city">Select City</string>
    <string name="select_language2">Select the application language:</string>
    <string name="select_language">-- Select Language --</string>
    <string name="select_location">-- Select Location --</string>
    <string name="challenge_title">Challenge title: %1$s</string>
    <string name="challenge_description">Challenge: %1$s</string>
    <string name="translated_challenge">Challenge: %1$s</string>
    <string name="distance">Distance: %1$.2f meters</string>
    <string name="tts_play">Listen</string>
    <string name="current_language_icon">Current Language Icon</string>
    <string name="challenge_points">Points : %1$d</string>
    <string name="points_not_available">Poeni nisu dostupni</string>
    <string name="speech_recognition">Speech Recognition</string>
    <string name="select_language_to_learn">Select a language to learn:</string>
    <string name="learn_english">English</string>
    <string name="learn_croatian">Croatian</string>
    <string name="learn_spanish">Spanish</string>
    <string name="home_learning_mode_description">Practice language skills comfortably from home</string>
    <string name="home_learning_mode_title">Home Learning Mode</string>
    <string name="adventure_mode_description">Explore and learn through interactive adventures.</string>
    <string name="adventure_mode_title">Adventure Mode</string>
    <string name="finish_challenge">Finish Challenge</string>

    <string name="lesson_animals_title">Animals</string>
    <string name="lesson_animals_description">Learn the names of animals.</string>
    <string name="lesson_colors_title">Colors</string>
    <string name="lesson_colors_description">Learn colors.</string>
    <string name="lesson_family_title">Family</string>
    <string name="lesson_family_description">Learn the names of family members.</string>
    <string name="progress_format">%1$d/%2$d words learned</string>
    <string name="start_button_text">Start</string>

    <string name="words">Word 1 of 5</string>
    <string name="show_translate">Show word</string>
    <string name="next">Next</string>
    <string name="gohomebutton">Start Over</string>
    <string name="submit">Submit</string>

    <string name="language_english">English</string>
    <string name="language_croatian">Croatian</string>
    <string name="language_spanish">Spanish</string>
    <string name="quiz_result_text">You scored %1$d out of %2$d</string>
    <string name="prikaziprijevod">Show word</string>

    <string name="settingss">Settings</string>
    <string name="username">Username: </string>
    <string name="email">Email: </string>
    <string name="changepassword">Change password</string>
    <string name="notification">Send me notifications</string>
    <string name="darkmode">Enable Dark mode</string>
    <string name="currentl">Current Language: </string>
    <string name="contantsupport">Contant Support:</string>

    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>


    <string-array name="native_language_array">
        <item>Croatian</item>
    </string-array>
    <string-array name="learning_language_array">
        <item>-- Select Language --</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Croatian</item>

    </string-array>
    <string-array name="city_array">
        <item>-- Select Location --</item>
        <item>Zagreb</item>
        <item>Split</item>
        <item>Rijeka</item>
        <item>Use current location</item>

    </string-array>
    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Croatian</item>
        <!-- Add more languages as needed -->
    </string-array>
</resources>