<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <!-- Gradient Overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBackground"
        />

    <!-- Top Navigation Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="16dp"
            android:elevation="8dp"
            android:layout_margin="16dp"
            android:alpha="0.9">

            <!-- Traveler Illustration -->
            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/location"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp" /> <!-- Dodana margina -->



            <!-- Label and Icon for Learning Language -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_languagee"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp" /> <!-- Dodana margina -->
            </LinearLayout>

            <!-- Learning Language Spinner -->
            <Spinner
                android:id="@+id/learningLanguageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:background="@drawable/spinner_background"
                android:popupBackground="@color/white" />

            <!-- Label and Icon for City -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_city"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp" /> <!-- Dodana margina -->
            </LinearLayout>

            <!-- City Spinner -->
            <Spinner
                android:id="@+id/citySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:background="@drawable/spinner_background"
                android:popupBackground="@color/white" />



            <!-- Start Adventure Button -->
            <Button
                android:id="@+id/startAdventureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_background"
                android:textColor="@color/button_text_color"
                android:text="@string/start_adventure" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
